[package]
name = "situwaition"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = [
  "vados <vados@vadosware.io>"
]
categories = [ "async", "utilities", "tokio", "async-std" ]

[[example]]
name = "basic_sync"
path = "examples/basic_sync.rs"

[features]
default = []
tokio = ["dep:tokio", "dep:async-trait"]
async-std = ["dep:async-std", "dep:async-trait"]

[dependencies]
anyhow = "1.0.71"
tokio = { version = "1.29.1", optional = true, features = [ "time", "rt", "macros" ] }
async-trait = { version = "0.1.69", optional = true }
async-std = { version = "1.12.0", optional = true, features = [ "attributes" ] }
thiserror = "1.0.40"
derive_builder = "0.12.0"
