[package]
name = "situwaition"
version = "0.2.0"
edition = "2021"
description = "Run a closure continuously, until is succeeds or times out."
license = "MIT"
readme = "README.md"
rust-version = "1.70"
authors = [
  "vados <vados@vadosware.io>"
]
categories = [ "asynchronous" ]
repository = "https://github.com/t3hmrman/situwaition"

[[example]]
name = "sync"

[[example]]
name = "tokio"
crate-type = [ "bin" ]
required-features = [ "tokio" ]

[[example]]
name = "async-std"
path = "./examples/async_std.rs"
crate-type = [ "bin" ]
required-features = [ "async-std" ]

[features]
default = []
tokio = ["dep:tokio", "dep:async-trait"]
async-std = ["dep:async-std", "dep:async-trait"]

[dependencies]
anyhow = "1.0.71"
tokio = { version = "1.29.1", optional = true, features = [ "time", "rt", "macros" ] }
async-trait = { version = "0.1.69", optional = true }
async-std = { version = "1.12.0", optional = true, features = [ "attributes" ] }
thiserror = "1.0.40"
derive_builder = "0.12.0"

[dev-dependencies]
async-std = { version = "1.12.0", features = [ "attributes" ] }
tokio = { version = "1.29.1", features = [ "time", "rt", "macros", "rt-multi-thread" ] }
thiserror = "1.0.40"
