[package]
name = "situwaition-example-tokio"
description = "an example of using situwaition with tokio"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.29.1", features = [ "time", "rt", "macros", "rt-multi-thread" ] }
situwaition = { path = '../../', features = [ "tokio" ] }
thiserror = "1.0.40"
